Changed paths from absolute to relative
Signed-off-by: Claudio Rimann <contact@claudiorimann.ch>

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="/" class="navbar-brand">
-					<img src="/res/img/roketi_logo.png" />
+					<img src="res/img/roketi_logo.png" />
 				</a>
 			</div>
 			<div class="navbar-collapse collapse">
@@ -40,7 +40,7 @@
 </div>
 
 <div class="row" id="moodImage">
-	<img src="/res/img/moodImage.jpg" />
+	<img src="res/img/moodImage.jpg" />
 </div>
 <div class="row light" id="mission">
 	<div class="container">
@@ -128,7 +128,7 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="team-member">
-				<img alt="Mario Rimann" src="/res/img/mario_rimann.jpg">
+				<img alt="Mario Rimann" src="res/img/mario_rimann.jpg">
 				<h2>Mario Rimann</h2>
 				<p class="position">Trying to get things going</p>
 				<p><a href="mailto:mario@rimann.org">mario@rimann.org</a></p>
@@ -141,7 +141,7 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="team-member">
-				<img alt="Maybe you? (Image from http://www.flickr.com/photos/clover_1/138839828/)" src="/res/img/second_team_member.jpg">
+				<img alt="Maybe you? (Image from http://www.flickr.com/photos/clover_1/138839828/)" src="res/img/second_team_member.jpg">
 				<h2>Maybe you?</h2>
 				<p class="position">The next Team Member</p>
 			</div>
