Added Logo as SVG (fallback to PNG)
Signed-off-by: Claudio Rimann <contact@claudiorimann.ch>

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="/" class="navbar-brand">
-					<img src="res/img/roketi_logo.png" />
+					<img src="res/img/roketi_logo.svg" alt="roketi Logo" onerror="this.onerror=null; this.src='res/img/roketi_logo.png'" />
 				</a>
 			</div>
 			<div class="navbar-collapse collapse">
@@ -168,8 +168,8 @@
 	</div>
 </div>
 <footer>
-	<a href="#home">
-		<img src="res/img/roketi_logo.png">
+	<a href="#home" class="footer-brand">
+		<img src="res/img/roketi_logo.svg" alt="roketi Logo" onerror="this.onerror=null; this.src='res/img/roketi_logo.png'" />
 	</a>
 </footer>
 
