Fixed some Typos
Signed-off-by: Claudio Rimann <contact@claudiorimann.ch>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Roketi - Cluser Hosting Control-Panel</title>
+	<title>Roketi - Cluster Hosting Control-Panel</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 
@@ -72,7 +72,7 @@
 				<li>Two or more Mail-Servers</li>
 			</ul>
 			<p>This will enable a <bold>multi-node or cluster architecture</bold> where one master "controls" many single nodes that deliver the services.</p>
-			<p>All of the nodes that deliver any kind of service will run a small agent that connects to the central management host to get the needed details. Depending of the role(s) of the single node, the management system will provide the agent with the needed details in a raw format. After fetching it's configuration, the agent then locally generates the neede config files to be able to deliver it's services.</p>
+			<p>All of the nodes that deliver any kind of service will run a small agent that connects to the central management host to get the needed details. Depending of the role(s) of the single node, the management system will provide the agent with the needed details in a raw format. After fetching it's configuration, the agent then locally generates the needed config files to be able to deliver it's services.</p>
 			<p>Every node can contain one ore more roles - so that one can start small and add more nodes depending on the growing needs. We recommend to start with some redundancy from the start - but basically, a very small setup can consist of one server containing both the management system and the needed server-roles on the same server.</p>
 		</div>
 	</div>
@@ -97,7 +97,7 @@
 			<ul>
 				<li>Probably Nginx based</li>
 				<li>With PHP-FPM to serve dynamic content</li>
-				<li>Other script languages like Ruby could be implemented, too (depending no someone to do that)</li>
+				<li>Other script languages like Ruby could be implemented, too (depending on someone to do that)</li>
 			</ul>
 		</div>
 		<div class="col-md-4">
@@ -123,7 +123,7 @@
 	<div class="container">
 		<div class="col-sm-4">
 			<h2>Contact us:</h2>
-			<p>At the moment, I'm trying to get a small but powerful team together to build that awesome project.</p>
+			<p>At the moment, i'm trying to get a small but powerful team together to build that awesome project.</p>
 			<p>If you're interested, just <a href="mailto:mario@rimann.org">get in touch</a>!</p>
 		</div>
 		<div class="col-sm-4">
