[TASK] Fixed typo

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<div class="container">
 		<div class="col-sm-4">
 			<h2>Contact us:</h2>
-			<p>At the moment, i'm trying to get a small but powerful team together to build that awesome project.</p>
+			<p>At the moment, I'm trying to get a small but powerful team together to build that awesome project.</p>
 			<p>If you're interested, just <a href="mailto:mario@rimann.org">get in touch</a>!</p>
 		</div>
 		<div class="col-sm-4">
