[TASK] Add some links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</ul>
 			<h3>Web Hosting</h3>
 			<ul>
-				<li>Probably Nginx based</li>
+				<li>Probably <a href="http://nginx.org/" target="_blank">Nginx</a> based</li>
 				<li>With PHP-FPM to serve dynamic content</li>
 				<li>Other script languages like Ruby could be implemented, too (depending on someone to do that)</li>
 			</ul>
@@ -108,9 +108,9 @@
 			</ul>
 			<h3>E-Mail Hosting</h3>
 			<ul>
-				<li>Based on Postfix for the hard work with the mails</li>
-				<li>IMAP access via Dovecot</li>
-				<li>Webmail access based on Roundcube</li>
+				<li>Based on <a href="http://www.postfix.org/" target="_blank">Postfix</a> for the hard work with the mails</li>
+				<li>IMAP access via <a href="http://www.dovecot.org/" target="_blank">Dovecot</a></li>
+				<li>Webmail access based on <a href="http://roundcube.net" target="_blank">Roundcube</a></li>
 				<li>Of course some kind of spam and virus filtering will be implemented</li>
 				<li>Redundant MX hosts with central storage will be possible</li>
 			</ul>
