--- a/index.html
+++ b/index.html
@@ -121,25 +121,40 @@
 
 <div class="row dark" id="contact">
 	<div class="container">
-		<div class="col-sm-4">
+		<div class="col-sm-3">
 			<h2>Contact us:</h2>
 			<p>At the moment, I'm trying to get a small but powerful team together to build that awesome project.</p>
 			<p>If you're interested, just <a href="mailto:mario@rimann.org">get in touch</a>!</p>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-3">
 			<div class="team-member">
 				<img alt="Mario Rimann" src="res/img/mario_rimann.jpg">
 				<h2>Mario Rimann</h2>
 				<p class="position">Trying to get things going</p>
 				<p><a href="mailto:mario@rimann.org">mario@rimann.org</a></p>
 				<ul class="inline text-center">
-					<a href="https://facebook.com/mario.rimann"><i class="ico">F</i></a>
-					<a href="https://plus.google.com/117453364840709562175"><i class="ico">G</i></a>
-					<a href="https://twitter.com/mrimann"><i class="ico">L</i></a>
+					<a href="https://facebook.com/mario.rimann"><i class="ico">f</i></a>
+					<a href="http://rimann.org/"><i class="ico">-</i></a>
+					<a href="https://plus.google.com/117453364840709562175"><i class="ico">g</i></a>
+					<a href="https://twitter.com/mrimann"><i class="ico">l</i></a>
+					<a href="http://github.com/mrimann"><i class="ico">2</i></a>
 				</ul>
 			</div>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-3">
+			<div class="team-member">
+				<img alt="Tobias Brunner" src="res/img/tobru-portrait.jpg">
+				<h2>Tobias Brunner</h2>
+				<p class="position">Rocket Scientist</p>
+				<p><a href="mailto:tobias@tobru.ch">tobias@tobru.ch</a></p>
+				<ul class="inline text-center">
+					<a href="http://github.com/tobru"><i class="ico">2</i></a>
+					<a href="http://tobrunet.ch/"><i class="ico">-</i></a>
+					<a href="https://twitter.com/tobruzh"><i class="ico">L</i></a>
+				</ul>
+			</div>
+		</div>
+		<div class="col-sm-3">
 			<div class="team-member">
 				<img alt="Maybe you? (Image from http://www.flickr.com/photos/clover_1/138839828/)" src="res/img/second_team_member.jpg">
 				<h2>Maybe you?</h2>
