[BUGFIX] Wrong Twitter icon

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				<ul class="inline text-center">
 					<a href="http://github.com/tobru"><i class="ico">2</i></a>
 					<a href="http://tobrunet.ch/"><i class="ico">-</i></a>
-					<a href="https://twitter.com/tobruzh"><i class="ico">L</i></a>
+					<a href="https://twitter.com/tobruzh"><i class="ico">l</i></a>
 				</ul>
 			</div>
 		</div>
