[TASK] Add favicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link href="https://plus.google.com/117453364840709562175/" rel="author" />
 	<link href="https://plus.google.com/117453364840709562175/" rel="publisher" />
 
+	<link rel="icon" type="image/png" href="/res/img/favicon.ico">
+
 	<link rel="stylesheet" href="res/roketi.css">
 
 
