[TASK] Add Meta Description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 	<link rel="stylesheet" href="res/roketi.css">
 
-
+	<meta name="description" content="Home of Roketi, the new open-source cluster management system for ISPs that want to ease the management of the websites they host.">
+	<meta name="keywords" content="Roketi, Hosting, Cluster, Management-System, Webserver, Configuration, Control-Panel">
+	<meta name="author" content="Mario Rimann">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="80" id="home">
