[CLEANUP] Validation warnings and errors

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 </div>
 
 <div class="row" id="moodImage">
-	<img src="res/img/moodImage.jpg" />
+	<img src="res/img/moodImage.jpg" alt="A spaceship at take-off, illustrating the rocket that Roketi's name is based on."/>
 </div>
 <div class="row light" id="mission">
 	<div class="container">
 		<div class="col-md-6">
 			<h2>Our mission:</h2>
-			<p class="lead">We think that <bold>web-hosting</bold> shouldn't be rocket-science to manage!</p>
+			<p class="lead">We think that <b>web-hosting</b> shouldn't be rocket-science to manage!</p>
 		</div>
 		<div class="col-md-6">
-			<p>We want to create a new <bold>centralized Hosting Control Panel</bold> that (almost) everyone can use to manage the hosting of websites.</p>
-			<p>The software we create will be <bold>released as open-source software</bold> to enable everyone to use it - and to enable many of you to contribute to make it even better!</p>
+			<p>We want to create a new <b>centralized Hosting Control Panel</b> that (almost) everyone can use to manage the hosting of websites.</p>
+			<p>The software we create will be <b>released as open-source software</b> to enable everyone to use it - and to enable many of you to contribute to make it even better!</p>
 		</div>
 	</div>
 </div>
@@ -75,7 +75,7 @@
 				<li>A bunch of Web-Servers to deliver the hosted websites</li>
 				<li>Two or more Mail-Servers</li>
 			</ul>
-			<p>This will enable a <bold>multi-node or cluster architecture</bold> where one master "controls" many single nodes that deliver the services.</p>
+			<p>This will enable a <b>multi-node or cluster architecture</b> where one master "controls" many single nodes that deliver the services.</p>
 			<p>All of the nodes that deliver any kind of service will run a small agent that connects to the central management host to get the needed details. Depending of the role(s) of the single node, the management system will provide the agent with the needed details in a raw format. After fetching it's configuration, the agent then locally generates the needed config files to be able to deliver it's services.</p>
 			<p>Every node can contain one ore more roles - so that one can start small and add more nodes depending on the growing needs. We recommend to start with some redundancy from the start - but basically, a very small setup can consist of one server containing both the management system and the needed server-roles on the same server.</p>
 		</div>
@@ -137,11 +137,11 @@
 				<p class="position">Trying to get things going</p>
 				<p><a href="mailto:mario@rimann.org">mario@rimann.org</a></p>
 				<ul class="inline text-center">
-					<a href="https://facebook.com/mario.rimann"><i class="ico">f</i></a>
-					<a href="http://rimann.org/"><i class="ico">-</i></a>
-					<a href="https://plus.google.com/117453364840709562175"><i class="ico">g</i></a>
-					<a href="https://twitter.com/mrimann"><i class="ico">l</i></a>
-					<a href="http://github.com/mrimann"><i class="ico">2</i></a>
+					<li><a href="https://facebook.com/mario.rimann"><i class="ico">f</i></a></li>
+					<li><a href="http://rimann.org/"><i class="ico">-</i></a></li>
+					<li><a href="https://plus.google.com/117453364840709562175"><i class="ico">g</i></a></li>
+					<li><a href="https://twitter.com/mrimann"><i class="ico">l</i></a></li>
+					<li><a href="http://github.com/mrimann"><i class="ico">2</i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -152,9 +152,9 @@
 				<p class="position">Rocket Scientist</p>
 				<p><a href="mailto:tobias@tobru.ch">tobias@tobru.ch</a></p>
 				<ul class="inline text-center">
-					<a href="http://github.com/tobru"><i class="ico">2</i></a>
-					<a href="http://tobrunet.ch/"><i class="ico">-</i></a>
-					<a href="https://twitter.com/tobruzh"><i class="ico">l</i></a>
+					<li><a href="http://github.com/tobru"><i class="ico">2</i></a></li>
+					<li><a href="http://tobrunet.ch/"><i class="ico">-</i></a></li>
+					<li><a href="https://twitter.com/tobruzh"><i class="ico">l</i></a></li>
 				</ul>
 			</div>
 		</div>
