[TASK] Add headline for SEO :-)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="container">
 		<div class="col-md-6">
 			<h2>Our mission:</h2>
-			<p class="lead">We think that <b>web-hosting</b> shouldn't be rocket-science to manage!</p>
+			<h1 class="lead">We think that <b>web-hosting</b> shouldn't be rocket-science to manage!</h1>
 		</div>
 		<div class="col-md-6">
 			<p>We want to create a new <b>centralized Hosting Control Panel</b> that (almost) everyone can use to manage the hosting of websites.</p>
