--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
 	</a>
 </footer>
 
+<a href="https://github.com/roketi/panel" target="_blank" class="forkMeRibbon">
+	<img src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
+</a>
+
+
 <script src="res/bootstrap-3.0.0/assets/js/jquery.js" type="text/javascript"></script>
 <script src="res/bootstrap-3.0.0/js/scrollspy.js" type="text/javascript"></script>
 <script src="res/jquery.scrollto.js" type="text/javascript"></script>
