[TASK] Update mission statement

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
 			<h1 class="lead">We think that <b>web-hosting</b> shouldn't be rocket-science to manage!</h1>
 		</div>
 		<div class="col-md-6">
-			<p>We want to create a new <b>centralized Hosting Control Panel</b> that (almost) everyone can use to manage the hosting of websites.</p>
-			<p>The software we create will be <b>released as open-source software</b> to enable everyone to use it - and to enable many of you to contribute to make it even better!</p>
+			<p>We want to create a new <bold>centralized Hosting Control Panel</bold> that (almost) everyone can use to manage the hosting of websites.</p>
+			<p>The software we create will be <bold>released as open-source software</bold> to enable everyone to use it - and to enable many of you to contribute to make it even better!</p>
+			<p>We can't imagine your exact needs or requirements - that's why we ship a base configuration of a <bold>modular system</bold>. Don't like one of the parts? Just replace it!</p>
+			<p>In contrary to the existing systems that have evolved in years or even decades, often based on the way to go back then, we want to create a fresh system that is <bold>based on the best practices of 2014</bold>.</p>
+			<p>We <bold>target small to mid-sized organisations</bold> like e.g. web-agencies that offer web-hosting for their customers. Our best-practice approach will basically fit their needs out of the box - but can be adapted or extended for specific needs.</p>
 		</div>
 	</div>
 </div>
